--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,7 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+      - run: echo ${{ secrets.DOCKER_USERNAME }}
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
