--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,14 +16,23 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    
+    env:
+      DOCKER_REPO: ${{ secrets.DOCKER_USERNAME }}/project2-frontend:dev
 
     steps:
+
       - name: Checkout repository
         uses: actions/checkout@v4
-      - run: echo ${{ secrets.DOCKER_USERNAME }}
+
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
-      - run: echo "Logged in"
+        continue-on-error: false
+      
+      - name: Create updated image build
+        run: |
+          docker build . -t $DOCKER_REPO
+          docker push $DOCKER_REPO
