--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "embla-carousel-react": "^8.5.1",
     "frontend": "file:",
     "jest-environment-jsdom": "^29.7.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.469.0",
     "react": "^18.3.1",
+    "react-cookie": "^7.2.2",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router": "^7.1.0",
