Added environment variables for steam apis for dev and prod

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,4 @@
 # Vite will automatically load this up for link when npm run build is run since its set to --mode production
 VITE_BACKEND=aws-link
+VITE_STEAM_FEATURED=https://store.steampowered.com/api/featuredcategories/
+VITE_STEAM_SEARCH=
