Updated link for featured section api. Added link to nginx reverse proxy on ec2

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 # Vite will automatically load this up for link when npm run build is run since its set to --mode production
 VITE_BACKEND=aws-link
-VITE_STEAM_FEATURED=https://store.steampowered.com/api/featuredcategories/
+VITE_STEAM_FEATURED=http://ec2-3-137-66-132.us-east-2.compute.amazonaws.com/steam-api/
 VITE_STEAM_SEARCH=
