--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -3,7 +3,7 @@ name: Docker Image CD
 on:
   workflow_run:
     workflows: ["Docker Image CI"]
-    branches: [login-signup]
+    branches: [main]
     types:
       - completed
 
