--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@testing-library/user-event": "^14.5.2",
     "axios": "^1.7.9",
     "bulletin-board-code": "^1.0.2",
     "class-variance-authority": "^0.7.1",
