--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bulletin-board-code": "^1.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.1",
     "frontend": "file:",
     "jest-environment-jsdom": "^29.7.0",
