--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "jest",
-    "test:cov": "jest --coverage"
+    "test:cov": "jest --coverage --watchAll"
   },
   "dependencies": {
     "@radix-ui/react-label": "^2.1.1",
