--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,5 @@
 # Vite will automatically load this up for link when npm run dev is run
 VITE_BACKEND=http://localhost:8081
 VITE_STEAM_FEATURED=https://cors-anywhere.herokuapp.com/https://store.steampowered.com/api/featuredcategories/
-VITE_STEAM_SEARCH=
+VITE_STEAM_SEARCH=https://cors-anywhere.herokuapp.com/https://steamcommunity.com/actions/SearchApps/
+VITE_STEAM_NEWS=https://cors-anywhere.herokuapp.com/https://api.steampowered.com/ISteamNews/GetNewsForApp/v0002/
