only run deploy if previous step is successful

--- a/.github/workflows/features_pipeline.yml
+++ b/.github/workflows/features_pipeline.yml
@@ -35,6 +35,7 @@ jobs:
 
   deploy:
     runs-on: [self-hosted, frontend]
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
 
     env:
       DOCKER_REPO: ${{ secrets.DOCKER_USERNAME }}/project2-frontend:dev
