--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@testing-library/user-event": "^14.5.2",
     "axios": "^1.7.9",
-    "babel-plugin-transform-import-meta": "^2.3.2",
     "bulletin-board-code": "^1.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -32,8 +31,7 @@
     "react-icons": "^5.4.0",
     "react-router": "^7.1.1",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7",
-    "vite-plugin-environment": "^1.1.3"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
